--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,39 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
-    // Array.prototype.every() // is everyone 19 or older?
+    // First Answer:
+    // const isAdult = people.some(person => {
+    //   const currentYear = (new Date()).getFullYear()
+    //   return currentYear - person.year >= 19 // Will return true if it's true
+    // })
+    // Shorter way:
+    const isAdult = people.some(person => ((new Date()).getFullYear()) - person.year >= 19) // Will return true if it's true
+    console.log({isAdult})
 
+    // Array.prototype.every() // is everyone 19 or older?
+    const allAdults = people.every(person => ((new Date()).getFullYear()) - person.year >= 19) // Will return true if it's true
+    console.log(allAdults)
+    
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const comment = comments.find(comment => comment.id === 823423)
+    console.log(comment)
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const index = comments.findIndex(comment => comment.id === 823423)
+    // First way, Remove item from the original array:
+    // comments.splice(index, 1) // remove 1 item from the array at the desired index
+    // console.table(comments)
+
+    // Second way, make a copy of the original array with the item sliced from it:
+    const newComments = [
+      ...comments.slice(0, index), // Slice from index 0 to desired index
+      ...comments.slice(index + 1) // Slice from desired index + 1 so the item is out
+    ]
+    console.table(newComments)
 
   </script>
 </body>
